--- a/src/style/navbar.css
+++ b/src/style/navbar.css
@@ -1,6 +1,6 @@
 .menu-nav{
     display: grid;
-    grid-template-columns: 50px 2fr 1fr 0.3fr 50px;
+    grid-template-columns: 70px 2fr 1fr 0.3fr 70px;
     font-size: larger;
     width: 100%;
     height: 70px;
@@ -10,6 +10,7 @@
     grid-column:2/3;
     padding-top: 16px;
     padding-left: 70px;
+    color: black;
 }
 
 .menu-link{
@@ -62,6 +63,7 @@
 .socialIcon .col-1{
     margin-right: 20px;
 }
+
 @media  screen and (max-width:750px) {
     .menu-nav .logo{
         padding-left: 30px;
@@ -75,6 +77,7 @@
       
         grid-template-columns: 2rem 2fr 2fr  2rem;
       }
+    
     .menu-nav .logo{
         height: 30px;
         margin-top: 10px;
